# simple-chatbot-miniRAG

./: .gitignore  README.md  SPECIFICATIONS.md  SPECIFICATIONS_es.md  pyproject.toml
src/simple_chatbot/: __init__.py  chatbot.py  cli.py  config.py  knowledge_base.py  llm_client.py  memory.py
tests/: __init__.py  test_chatbot.py  test_config.py  test_knowledge_base.py  test_memory.py
